[package]
name = "rindgen"
description = "Yet another index generator (rewrite in Rust)"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/index-generator-project/rindgen"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
getopts = "0.2.21"
include_dir = "0.7.4"
mime_guess = "2.0.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tera = "1.20.0"
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true
